[SOUP] Do not disable the idle connection timeout https://bugs.webkit.org/show_bug.cgi?id=226263

Reviewed by Sergio Villar Senin.

We disable the connection timeout in SoupSession because we implement our own timeout in WebKit, but that's not
the case for the idle connection timeout. There's no reason keep idle connection alive forever.

* platform/network/soup/SoupNetworkSession.cpp:
(WebCore::SoupNetworkSession::SoupNetworkSession):

Canonical link: https://commits.webkit.org/238198@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278154 268f45cc-cd09-0410-ab3c-d52691b4dbfc